# TestGui

./: .buildconfig  README.md  meson.build  org.gnome.Testgui.json~
data/: meson.build  org.gnome.Testgui.appdata.xml.in  org.gnome.Testgui.desktop.in  org.gnome.Testgui.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  testgui-window.c  testgui-window.h  testgui-window.ui  testgui.gresource.xml
